@@ -7,6 +7,13 @@ import java.util.List;
 
 import static org.hamcrest.Matchers.hasSize;
 import static org.hamcrest.Matchers.is;
+import ch.uzh.ifi.hase.soprafs26.entity.Trip;
+import ch.uzh.ifi.hase.soprafs26.entity.User;
+import ch.uzh.ifi.hase.soprafs26.constant.UserStatus;
+import ch.uzh.ifi.hase.soprafs26.rest.dto.TripPostDTO;
+import ch.uzh.ifi.hase.soprafs26.service.DestinationRealtimeService;
+import ch.uzh.ifi.hase.soprafs26.service.TripService;
+import ch.uzh.ifi.hase.soprafs26.service.UserService;
 import org.junit.jupiter.api.Test;
 import static org.mockito.BDDMockito.given;
 import org.mockito.Mockito;
@@ -18,6 +25,7 @@ import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.web.server.ResponseStatusException;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
+import org.springframework.web.servlet.mvc.method.annotation.SseEmitter;
 
 import ch.uzh.ifi.hase.soprafs26.entity.Trip;
 import ch.uzh.ifi.hase.soprafs26.entity.User;
@@ -25,6 +33,17 @@ import ch.uzh.ifi.hase.soprafs26.rest.dto.TripPostDTO;
 import ch.uzh.ifi.hase.soprafs26.service.TripService;
 import ch.uzh.ifi.hase.soprafs26.service.UserService;
 import tools.jackson.databind.ObjectMapper;
+
+import java.util.Arrays;
+import java.util.Date;
+import java.util.List;
+
+import static org.hamcrest.Matchers.hasSize;
+import static org.hamcrest.Matchers.is;
+import static org.mockito.BDDMockito.given;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 /**
  * TripControllerTest
@@ -41,8 +60,20 @@ public class TripControllerTest {
     @MockitoBean
     private TripService tripService;
 
-        @MockitoBean
-        private UserService userService;
+    @MockitoBean
+    private DestinationRealtimeService destinationRealtimeService;
+  
+    @MockitoBean
+    private UserService userService;
+
+    private User authenticatedUser() {
+        User user = new User();
+        user.setId(1L);
+        user.setUsername("testUser");
+        user.setStatus(UserStatus.ONLINE);
+        user.setToken("1");
+        return user;
+    }
 
     @Test
     public void givenTrips_whenGetTrips_thenReturnJsonArray() throws Exception {
@@ -58,7 +89,7 @@ public class TripControllerTest {
         trip.setHostId(1L);
         trip.setStatus(Trip.TripStatus.ACTIVE);
 
-        List<Trip> allTrips = Collections.singletonList(trip);
+        List<Trip> allTrips = List.of(trip);
 
         // this mocks the TripService -> we define above what the tripService should
         // return when getTripsForUser() is called
@@ -89,11 +120,13 @@ public class TripControllerTest {
         trip.setHostId(1L);
         trip.setStatus(Trip.TripStatus.ACTIVE);
 
+        given(userService.validateToken("Bearer 1")).willReturn(authenticatedUser());
         given(tripService.getTripById(1L)).willReturn(trip);
 
         // when
         MockHttpServletRequestBuilder getRequest = get("/trips/1")
-                .contentType(MediaType.APPLICATION_JSON);
+                .contentType(MediaType.APPLICATION_JSON)
+                .header("Authorization", "Bearer 1");
 
         // then
         mockMvc.perform(getRequest)
@@ -113,11 +146,13 @@ public class TripControllerTest {
         trip.setHostId(1L);
         trip.setStatus(Trip.TripStatus.ACTIVE);
 
+        given(userService.validateToken("Bearer 1")).willReturn(authenticatedUser());
         given(tripService.getTripByRoomCode("ABC123")).willReturn(trip);
 
         // when
         MockHttpServletRequestBuilder getRequest = get("/trips/room/ABC123")
-                .contentType(MediaType.APPLICATION_JSON);
+                .contentType(MediaType.APPLICATION_JSON)
+                .header("Authorization", "Bearer 1");
 
         // then
         mockMvc.perform(getRequest)
@@ -144,11 +179,13 @@ public class TripControllerTest {
         trip2.setStatus(Trip.TripStatus.ACTIVE);
 
         List<Trip> trips = Arrays.asList(trip1, trip2);
+        given(userService.validateToken("Bearer 1")).willReturn(authenticatedUser());
         given(tripService.getTripsByHostId(1L)).willReturn(trips);
 
         // when
         MockHttpServletRequestBuilder getRequest = get("/trips/host/1")
-                .contentType(MediaType.APPLICATION_JSON);
+                .contentType(MediaType.APPLICATION_JSON)
+                .header("Authorization", "Bearer 1");
 
         // then
         mockMvc.perform(getRequest)
@@ -168,6 +205,9 @@ public class TripControllerTest {
         TripPostDTO tripPostDTO = new TripPostDTO();
         tripPostDTO.setName("Paris Vacation");
 
+                User authenticatedUser = new User();
+                authenticatedUser.setId(1L);
+
         Trip trip = new Trip();
         trip.setId(1L);
         trip.setName("Paris Vacation");
@@ -176,6 +216,7 @@ public class TripControllerTest {
         trip.setStatus(Trip.TripStatus.ACTIVE);
         trip.setCreationDate(new Date());
 
+        given(userService.validateToken("Bearer test-token")).willReturn(authenticatedUser);
         given(tripService.createTrip(Mockito.any())).willReturn(trip);
 
         // when
@@ -203,12 +244,14 @@ public class TripControllerTest {
         trip.setHostId(1L);
         trip.setStatus(Trip.TripStatus.EVALUATION);
 
+        given(userService.validateToken("Bearer 1")).willReturn(authenticatedUser());
         given(tripService.updateTripStatus(1L, Trip.TripStatus.EVALUATION)).willReturn(trip);
 
         // when
         MockHttpServletRequestBuilder putRequest = put("/trips/1/status")
                 .param("newStatus", "EVALUATION")
-                .contentType(MediaType.APPLICATION_JSON);
+                .contentType(MediaType.APPLICATION_JSON)
+                .header("Authorization", "Bearer 1");
 
         // then
         mockMvc.perform(putRequest)
@@ -227,17 +270,91 @@ public class TripControllerTest {
         trip.setStatus(Trip.TripStatus.FINALIZED);
         trip.setFinalDestinationId(5L);
 
+        given(userService.validateToken("Bearer 1")).willReturn(authenticatedUser());
         given(tripService.setFinalDestination(1L, 5L)).willReturn(trip);
 
         // when
         MockHttpServletRequestBuilder putRequest = put("/trips/1/finalize")
                 .param("finalDestinationId", "5")
-                .contentType(MediaType.APPLICATION_JSON);
+                .contentType(MediaType.APPLICATION_JSON)
+                .header("Authorization", "Bearer 1");
 
         // then
         mockMvc.perform(putRequest)
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.finalDestinationId", is(5)))
                 .andExpect(jsonPath("$.status", is("FINALIZED")));
+    }
+
+    @Test
+    public void generateInvite_validHostToken_success() throws Exception {
+        // given
+        User hostUser = new User();
+        hostUser.setId(1L);
+        hostUser.setUsername("hostUser");
+
+        Trip trip = new Trip();
+        trip.setId(1L);
+        trip.setName("Paris Vacation");
+        trip.setRoomCode("ABC123");
+        trip.setHostId(1L);
+        trip.setStatus(Trip.TripStatus.ACTIVE);
+      
+
+        given(userService.validateToken("Bearer valid-token")).willReturn(hostUser);
+        given(tripService.getTripById(1L)).willReturn(trip);
+
+        // when
+        MockHttpServletRequestBuilder postRequest = post("/trips/1/invite")
+                .header("Authorization", "Bearer valid-token")
+                .contentType(MediaType.APPLICATION_JSON);
+
+        // then
+        mockMvc.perform(postRequest)
+                .andExpect(status().isCreated())
+                .andExpect(jsonPath("$.roomCode", is("ABC123")));
+    }
+
+        @Test
+        public void generateInvite_invalidToken_unauthorized() throws Exception {
+        // given
+        given(userService.validateToken("Bearer invalid-token"))
+                .willThrow(new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Invalid or expired token!"));
+
+        // when
+        MockHttpServletRequestBuilder postRequest = post("/trips/1/invite")
+                .header("Authorization", "Bearer invalid-token")
+                .contentType(MediaType.APPLICATION_JSON);
+
+        // then
+        mockMvc.perform(postRequest)
+                .andExpect(status().isUnauthorized());
+    }
+
+    @Test
+    public void generateInvite_userNotHost_forbidden() throws Exception {
+        // given
+        User nonHostUser = new User();
+        nonHostUser.setId(2L);
+        nonHostUser.setUsername("nonHostUser");
+
+        Trip trip = new Trip();
+        trip.setId(1L);
+        trip.setName("Paris Vacation");
+        trip.setRoomCode("ABC123");
+        trip.setHostId(1L); // Different from nonHostUser.getId()
+        trip.setStatus(Trip.TripStatus.ACTIVE);
+
+        given(userService.validateToken("Bearer valid-token")).willReturn(nonHostUser);
+        given(tripService.getTripById(1L)).willReturn(trip);
+
+        // when
+        MockHttpServletRequestBuilder postRequest = post("/trips/1/invite")
+                .header("Authorization", "Bearer valid-token")
+                .contentType(MediaType.APPLICATION_JSON);
+
+        // then
+        mockMvc.perform(postRequest)
+                .andExpect(status().isForbidden());
     }
 }
